--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.7.0",
@@ -35,6 +36,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
+    "cypress": "^13.8.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
